create video encoder and finish

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ DB_TYPE_TEST="sqlite3"
 DSN_TEST=":memory:"
 
 ENV="dev"
-DEBUG=true
+DEBUG=false
 AUTO_MIGRATE_DB=true
 
 LOCAL_STORAGE_PATH="/tmp"
-GOOGLE_APPLICATION_CREDENTIALS="bucket-credential.json"
+GOOGLE_APPLICATION_CREDENTIALS="/go/src/bucket-credential.json"
