create upload manager

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ AUTO_MIGRATE_DB=true
 
 LOCAL_STORAGE_PATH="/tmp"
 GOOGLE_APPLICATION_CREDENTIALS="/go/src/bucket-credential.json"
+BUCKET_NAME="encoder-video"
