--- a/.env
+++ b/.env
@@ -11,3 +11,17 @@ AUTO_MIGRATE_DB=true
 LOCAL_STORAGE_PATH="/tmp"
 GOOGLE_APPLICATION_CREDENTIALS="/go/src/bucket-credential.json"
 BUCKET_NAME="encoder-video"
+
+CONCURRENCY_UPLOAD=50
+CONCURRENCY_WORKERS=2
+
+RABBITMQ_DEFAULT_USER=rabbitmq
+RABBITMQ_DEFAULT_PASS=rabbitmq
+RABBITMQ_DEFAULT_HOST=rabbit
+RABBITMQ_DEFAULT_PORT=5672
+RABBITMQ_DEFAULT_VHOST=/
+RABBITMQ_CONSUMER_NAME=app-name
+RABBITMQ_CONSUMER_QUEUE_NAME=videos
+RABBITMQ_NOTIFICATION_EX=amq.direct
+RABBITMQ_NOTIFICATION_ROUTING_KEY=jobs
+RABBITMQ_DLX=dlx
